<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="81dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonEsp"
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"

                android:contentDescription="@string/espresso_btn"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/espresso" />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="197dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/espresso"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description1"
                    android:layout_width="match_parent"
                    android:layout_height="81dp"
                    android:background="@color/transparent"
                    android:text="@string/espresso_des"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    tools:ignore="TextSizeCheck" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonAmr"
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:contentDescription="@string/americano_btn"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/americano_white" />

            <LinearLayout
                android:layout_width="197dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/americano"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description2"
                    android:layout_width="match_parent"
                    android:layout_height="81dp"
                    android:background="@android:color/transparent"
                    android:text="@string/americano_des"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    tools:ignore="TextSizeCheck" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonLatte"
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:contentDescription="@string/latte_btn"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/latte" />

            <LinearLayout
                android:layout_width="197dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/latte"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description3"
                    android:layout_width="match_parent"
                    android:layout_height="81dp"
                    android:background="@android:color/transparent"
                    android:text="@string/latte_des"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    tools:ignore="TextSizeCheck" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonCapp"
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:contentDescription="@string/cappuccino_btn"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/cappuccino" />

            <LinearLayout
                android:layout_width="197dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/cappuccino"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description4"
                    android:layout_width="match_parent"
                    android:layout_height="81dp"
                    android:background="@android:color/transparent"
                    android:text="@string/cappuccino_des"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    tools:ignore="TextSizeCheck" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonFlat"
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:contentDescription="@string/flat_white_btn"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/flat"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <LinearLayout
                android:layout_width="197dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/flat_white"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description5"
                    android:layout_width="match_parent"
                    android:layout_height="81dp"
                    android:background="@android:color/transparent"
                    android:text="@string/flat_white_des"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    tools:ignore="TextSizeCheck" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout6"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonRaf"
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:contentDescription="@string/raf_btn"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/raf"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <LinearLayout
                android:layout_width="197dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/raf"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/raf" />

                <TextView
                    android:id="@+id/description6"
                    android:layout_width="match_parent"
                    android:layout_height="81dp"
                    android:background="@android:color/transparent"
                    android:text="@string/flat_white_des"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    tools:ignore="TextSizeCheck"
                    tools:text="@string/raf_des" />


            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="250dp"
        android:text="@string/small_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text"
        app:layout_constraintVertical_bias="0.68"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
