<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragmentSnacks">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="396dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="432dp"
            android:layout_height="85dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/border_bg"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/pizza"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_marginTop="7dp"
                android:id="@+id/image_pizza"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@drawable/pizza" />

            <TextView
                android:id="@+id/text_pizza"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/pizza_des"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="432dp"
            android:layout_height="85dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/border_bg"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/donut"
                android:textSize="21sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_marginTop="7dp"
                android:id="@+id/image_donut"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@drawable/donut" />

            <TextView
                android:id="@+id/text_donut"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/donut_des"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="432dp"
            android:layout_height="85dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/border_bg"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/cake"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_marginTop="7dp"
                android:id="@+id/image_cake"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@drawable/cake" />

            <TextView
                android:id="@+id/text_cake"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/cake_des"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="432dp"
            android:layout_height="85dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/border_bg"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/croissant"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_marginTop="7dp"
                android:id="@+id/image_croissant"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@drawable/croissant" />

            <TextView
                android:id="@+id/text_croissant"
                android:layout_width="141dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/croissant_des"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>



    </LinearLayout>
</FrameLayout>